// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/note => should render TextInput as title component on desktop devices 1`] = `
<div
  class="note"
>
  <div
    class="note-toolbar note__toolbar"
  >
    <div
      class="note-toolbar__side note-toolbar__side_left"
    >
      <lego-components_button
        classname="note-toolbar__button note-toolbar__button_bold"
        disabled="false"
        size="m"
        type="check"
        view="clear"
      />
      <lego-components_button
        classname="note-toolbar__button note-toolbar__button_italic"
        disabled="false"
        size="m"
        type="check"
        view="clear"
      />
      <lego-components_button
        classname="note-toolbar__button note-toolbar__button_underline"
        disabled="false"
        size="m"
        type="check"
        view="clear"
      />
      <lego-components_button
        classname="note-toolbar__button note-toolbar__button_strikethrough"
        disabled="false"
        size="m"
        type="check"
        view="clear"
      />
      <lego-components_button
        classname="note-toolbar__button note-toolbar__button_list"
        disabled="false"
        size="m"
        type="check"
        view="clear"
      />
      <lego-components_button
        as="span"
        classname="upload-button upload-button_without-text note-toolbar__button note-toolbar__button_attach"
        size="m"
        view="clear"
      >
        <div
          class="upload-button__attach-wrapper"
        >
          <input
            accept=".jpg,.jpeg,.gif,.png,.bmp"
            class="upload-button__attach"
            multiple=""
            type="file"
          />
        </div>
      </lego-components_button>
    </div>
    <div
      class="note-toolbar__side note-toolbar__side_right"
    />
  </div>
  <div
    class="note__scroll-container"
  >
    <div
      class="note__content-wrapper"
    >
      <lego-components_textinput
        disabled="false"
        id="someId"
        maxlength="200"
        placeholder="Название"
        size="note"
        type="text"
        value="some-title"
        view="note"
      />
      <div
        class="note-state-indicator"
      />
    </div>
  </div>
</div>
`;

exports[`components/note => should render TextInput as title component on touch devices 1`] = `
<div
  class="note"
>
  <div
    class="note-toolbar note__toolbar"
  >
    <div
      class="note-toolbar__side note-toolbar__side_left"
    >
      <lego-components_button
        classname="note-toolbar__button note-toolbar__button_back"
        disabled="false"
        size="m"
        view="clear"
      />
    </div>
    <div
      class="note-toolbar__side note-toolbar__side_right"
    >
      <lego-components_button
        classname="note-toolbar__button note-toolbar__button_pin"
        size="m"
        view="clear"
      />
      <lego-components_button
        classname="note-toolbar__button note-toolbar__button_delete"
        size="m"
        view="clear"
      />
    </div>
  </div>
  <div
    class="note__scroll-container"
  >
    <div
      class="note__content-wrapper"
    >
      <lego-components_textinput
        disabled="false"
        id="someId"
        maxlength="200"
        placeholder="Название"
        size="note"
        type="text"
        value="some-title"
        view="note"
      />
      <div
        class="note-state-indicator"
      />
    </div>
  </div>
</div>
`;

exports[`components/note => should render note status indicator if note is loading on touch devices 1`] = `
<div
  class="note"
>
  <div
    class="note-toolbar note__toolbar"
  >
    <div
      class="note-toolbar__side note-toolbar__side_left"
    >
      <lego-components_button
        classname="note-toolbar__button note-toolbar__button_back"
        disabled="false"
        size="m"
        view="clear"
      />
    </div>
    <div
      class="note-toolbar__side note-toolbar__side_right"
    >
      <lego-components_button
        classname="note-toolbar__button note-toolbar__button_pin"
        size="m"
        view="clear"
      />
      <lego-components_button
        classname="note-toolbar__button note-toolbar__button_delete"
        size="m"
        view="clear"
      />
    </div>
  </div>
  <div
    class="note__scroll-container"
  >
    <div
      class="note__content-wrapper"
    >
      <lego-components_textinput
        disabled="false"
        id="someId"
        maxlength="200"
        placeholder="Название"
        size="note"
        type="text"
        value="some-title"
        view="note"
      />
      <div
        class="note-state-indicator"
      />
    </div>
  </div>
</div>
`;

exports[`components/note => should render note status indicator on desktop devices 1`] = `
<div
  class="note"
>
  <div
    class="note-toolbar note__toolbar"
  >
    <div
      class="note-toolbar__side note-toolbar__side_left"
    >
      <lego-components_button
        classname="note-toolbar__button note-toolbar__button_bold"
        disabled="false"
        size="m"
        type="check"
        view="clear"
      />
      <lego-components_button
        classname="note-toolbar__button note-toolbar__button_italic"
        disabled="false"
        size="m"
        type="check"
        view="clear"
      />
      <lego-components_button
        classname="note-toolbar__button note-toolbar__button_underline"
        disabled="false"
        size="m"
        type="check"
        view="clear"
      />
      <lego-components_button
        classname="note-toolbar__button note-toolbar__button_strikethrough"
        disabled="false"
        size="m"
        type="check"
        view="clear"
      />
      <lego-components_button
        classname="note-toolbar__button note-toolbar__button_list"
        disabled="false"
        size="m"
        type="check"
        view="clear"
      />
      <lego-components_button
        as="span"
        classname="upload-button upload-button_without-text note-toolbar__button note-toolbar__button_attach"
        size="m"
        view="clear"
      >
        <div
          class="upload-button__attach-wrapper"
        >
          <input
            accept=".jpg,.jpeg,.gif,.png,.bmp"
            class="upload-button__attach"
            multiple=""
            type="file"
          />
        </div>
      </lego-components_button>
    </div>
    <div
      class="note-toolbar__side note-toolbar__side_right"
    />
  </div>
  <div
    class="note__scroll-container"
  >
    <div
      class="note__content-wrapper"
    >
      <lego-components_textinput
        disabled="false"
        id="someId"
        maxlength="200"
        placeholder="Название"
        size="note"
        type="text"
        value="some-title"
        view="note"
      />
      <div
        class="note-state-indicator"
      />
    </div>
  </div>
</div>
`;
